Fix spacing

--- a/why-lumi.css
+++ b/why-lumi.css
@@ -2,7 +2,7 @@
   WHY LUMI SECTION
 ****************************************/
 .why-lumi {
-  padding: 10px 7rem 30px 7rem;
+  padding: 10px 7rem 0px 7rem;
   max-width: 1200px;
   margin: 0 auto;
 }
